# inspect_mate-project

./: .coveragerc  .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  create_doctree.py  install-win.bat  pyproject.toml  release-history.rst  requirements-dev.txt  setup.py  tox.ini
.pytest_cache/v/cache/: nodeids
dev/: analysis.py
inspect_mate/: __init__.py  getter.py  tester.py
inspect_mate/tests/: __init__.py
inspect_mate_pp/: __init__.py
tests/: test_getter.py  test_import.py  test_tester.py
